--- a/source/assets/stylesheets/pages/_home.scss
+++ b/source/assets/stylesheets/pages/_home.scss
@@ -171,7 +171,7 @@ section p
 	    width: 50px;
 	    height: 50px;
 	    cursor: pointer;
-	    background: #fff url(/source/assets/images/menu.png);
+	    background: #fff image_url('menu.png');
 	    background-size: 30px;
 	    background-repeat: no-repeat;
 	    background-position: center;
@@ -179,7 +179,7 @@ section p
 	}
 	header.sticky .toggle.active
 	{
-	    background: #fff url(/source/assets/images/close.png);
+	    background: #fff image_url('close.png');
 	    background-size: 25px;
 	    background-repeat: no-repeat;
 	    background-position: center;
