--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,17 +14,7 @@
 <section>
   <h2>A Kiwi Dev in Japan</h2>
   <p>Lovin' and livin' life as a developer in Japan.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
 </section>
-<script type="text/javascript">
-  window.addEventListener("scroll", function() {
-    var header = document.querySelector("header");
-    header.classList.toggle("sticky", window.scrollY > 0);
-  });
-  
-  const navigation = document.querySelector('nav');
-  document.querySelector('.toggle').onclick = function()
-  {
-    this.classList.toggle('active');
-    navigation.classList.toggle('active');
-  }
-</script>
