--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,10 +11,20 @@
     </ul>
   </nav>
 </header>
-<section>
+<section class="About">
   <h2>A Kiwi Dev in Japan</h2>
   <p>Lovin' and livin' life as a developer in Japan.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
 </section>
+<section class="Portfolio">
+  <h2>My Projects</h2>
+  <p>Lovin' and livin' life as a developer in Japan.</p>
+</section>
+<section class="Contact">
+  <h2>Send me a message</h2>
+  <p>Lovin' and livin' life as a developer in Japan.</p>
+</section>
+<footer>
+</footer>
