--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,30 +1,4 @@
-<header class="sticky">
-  <%= image_tag 'cheri2.JPG', alt: 'picture of cheri', class: 'banner' %>
-  <a href="#" class="logo">Cheri.</a>
-  <div class="toggle active"></div>
-  <nav class="active">
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-<section class="About">
-  <h2>A Kiwi Dev in Japan</h2>
-  <p>Lovin' and livin' life as a developer in Japan.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
-</section>
-<section class="Portfolio">
-  <h2>My Projects</h2>
-  <p>Lovin' and livin' life as a developer in Japan.</p>
-</section>
-<section class="Contact">
-  <h2>Send me a message</h2>
-  <p>Lovin' and livin' life as a developer in Japan.</p>
-</section>
-<footer>
-</footer>
+<%= partial 'partials/navbar' %>
+<%= partial 'partials/about' %>
+<%= partial 'partials/projects' %>
+<%= partial 'partials/contact' %>
