added partials folder and files

--- a/source/partials/_about.html.erb
+++ b/source/partials/_about.html.erb
@@ -1,7 +1,5 @@
-<section class="About">
+<section id="about">
   <h2>A Kiwi Dev in Japan</h2>
-  <p>Lovin' and livin' life as a developer in Japan.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis mollitia obcaecati quod adipisci nam exercitationem quae maiores ratione voluptates laborum velit doloribus sed sunt alias, libero reprehenderit ipsa id voluptatibus.</p>
+  <p class="subtitle">Lovin' and livin' life as a full-stack Ruby on Rails developer in Japan.</p>
+  <p>I moved to Japan at the end of July 2016 as part of the JET Programme. In September 2020, I decided to</p>
 </section>
