--- a/source/partials/_navbar.html.erb
+++ b/source/partials/_navbar.html.erb
@@ -3,10 +3,10 @@
   <a href="#" class="logo">Cheri.</a>
   <div class="toggle active"></div>
   <nav class="active">
-    <ul>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Contact</a></li>
+    <ul id="close_nav">
+      <li><%= link_to 'About', '#about' %></li>
+      <li><%= link_to 'Projects', '#projects' %></li>
+      <li><%= link_to 'Contact', '#contact' %></li>
     </ul>
   </nav>
 </header>
