--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,4 +1,4 @@
-<section class="Portfolio">
+<section id="projects">
   <h2>My Projects</h2>
   <p>Lovin' and livin' life as a developer in Japan.</p>
 </section>
