added margin bottom to h2 element in about section

--- a/source/partials/_about.html.erb
+++ b/source/partials/_about.html.erb
@@ -1,4 +1,4 @@
 <section id="about">
-  <h2>A Kiwi Dev in Japan 👩‍💻</h2>
-  <p >Hi! My name is Cheri, and if you haven't already guessed, I'm a Rails developer from New Zealand. I moved to Japan at the end of July 2016, and spent five wonderful years teaching English to elementary and junior high school students as part of the JET Programme. In September 2020, I decided to change careers, and jump into tech. I'm passionate about travelling, women's issues, and using tech to help people! Check out some of the projects I've worked on below...</p>
+  <h2 class="mb-5">A Kiwi Dev in Japan 👩‍💻</h2>
+  <p class="text-justify">Hi! My name is Cheri, and if you haven't already guessed, I'm a Rails developer from New Zealand. I moved to Japan at the end of July 2016, and spent five wonderful years teaching English to elementary and junior high school students as part of the JET Programme. In September 2020, I decided to change careers, and jump into tech. I'm passionate about travelling, women's issues, and using tech to help people! Check out some of the projects I've worked on below...</p>
 </section>
