--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,4 +1,9 @@
 <section id="projects">
-  <h2>My Projects</h2>
-  <p>Lovin' and livin' life as a developer in Japan.</p>
+  <h2 class="mb-5">My Projects</h2>
+  <h3>Safe Spaces 🏡</h3>
+  <p class="pb-4 text-justify border-bottom">Safe Spaces connects women walking home alone, with female homeowners who have kindly volunteered their places as somewhere these women can go, should they feel unsafe at any time.</p>
+  <h3 class="pt-3">Fam Finder 👫</h3>
+  <p class="pb-4 text-justify border-bottom">Need to hire a family member to take to your next event? We have you covered with Fam Finder!</p>
+  <h3 class="pt-3">Masquerade 💃</h3>
+  <p class="pb-4 text-justify">Manage those events, and beautiful Venetian masks with Masquerade.</p>
 </section>
