added margins and padding to sections

--- a/source/partials/_contact.html.erb
+++ b/source/partials/_contact.html.erb
@@ -1,4 +1,4 @@
 <section id="contact">
-  <h2>Send me a message</h2>
-  <p>Lovin' and livin' life as a developer in Japan.</p>
+  <h2 class="mb-4">Get in touch! 📲</h2>
+  <p>Feel free to reach out to me on any of the following platforms:</p>
 </section>
