changed z-index of navbar

--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -45,35 +45,37 @@
   </div>
   <h3 class="pt-3">Fam Finder 👫</h3>
   <p class="pb-4 text-justify">Need to hire a family member to take to your next event? We have you covered with Fam Finder!</p>
-  <div class="device device-macbook device-spacegray">
-    <div class="device-frame">
-      <img class="device-content" src="src/img/bg-07.jpg">
+  <div class="d-inline-flex p-2">
+    <div class="device device-macbook device-spacegray">
+      <div class="device-frame">
+        <img class="device-content" src="src/img/bg-07.jpg">
+      </div>
+      <div class="device-stripe"></div>
+      <div class="device-header"></div>
+      <div class="device-sensors"></div>
+      <div class="device-btns"></div>
+      <div class="device-power"></div>
     </div>
-    <div class="device-stripe"></div>
-    <div class="device-header"></div>
-    <div class="device-sensors"></div>
-    <div class="device-btns"></div>
-    <div class="device-power"></div>
-  </div>
-  <div class="device device-macbook device-spacegray">
-    <div class="device-frame">
-      <img class="device-content" src="src/img/bg-07.jpg">
+    <div class="device device-macbook device-spacegray">
+      <div class="device-frame">
+        <img class="device-content" src="src/img/bg-07.jpg">
+      </div>
+      <div class="device-stripe"></div>
+      <div class="device-header"></div>
+      <div class="device-sensors"></div>
+      <div class="device-btns"></div>
+      <div class="device-power"></div>
     </div>
-    <div class="device-stripe"></div>
-    <div class="device-header"></div>
-    <div class="device-sensors"></div>
-    <div class="device-btns"></div>
-    <div class="device-power"></div>
-  </div>
-  <div class="device device-macbook device-spacegray">
-    <div class="device-frame">
-      <img class="device-content" src="src/img/bg-07.jpg">
+    <div class="device device-macbook device-spacegray">
+      <div class="device-frame">
+        <img class="device-content" src="src/img/bg-07.jpg">
+      </div>
+      <div class="device-stripe"></div>
+      <div class="device-header"></div>
+      <div class="device-sensors"></div>
+      <div class="device-btns"></div>
+      <div class="device-power"></div>
     </div>
-    <div class="device-stripe"></div>
-    <div class="device-header"></div>
-    <div class="device-sensors"></div>
-    <div class="device-btns"></div>
-    <div class="device-power"></div>
   </div>
   <h3 class="pt-3">Masquerade 💃</h3>
   <p class="pb-4 text-justify">Manage those events, and beautiful Venetian masks with Masquerade.</p>
