--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -2,79 +2,95 @@
   <h2 class="mb-4">My Projects</h2>
   <h3>Safe Spaces 🏡</h3>
   <p class="pb-4 text-justify">Safe Spaces connects women walking home alone, with female homeowners who have kindly volunteered their places as somewhere these women can go, should they feel unsafe at any time.</p>
-  <div class="d-inline-flex p-2">
-    <div class="device device-iphone-x">
-      <div class="device-frame">
-        <video class="device-content" muted="muted" autoplay="" loop="">
-          <source src="src/video/bg-01.mp4" type="video/mp4">
-        </video>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="device device-iphone-x">
+          <div class="device-frame">
+            <video class="device-content" muted="muted" autoplay="" loop="">
+              <source src="src/video/bg-01.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="device-stripe"></div>
+          <div class="device-header"></div>
+          <div class="device-sensors"></div>
+          <div class="device-btns"></div>
+          <div class="device-power"></div>
+          <div class="device-home"></div>
+        </div>
       </div>
-      <div class="device-stripe"></div>
-      <div class="device-header"></div>
-      <div class="device-sensors"></div>
-      <div class="device-btns"></div>
-      <div class="device-power"></div>
-      <div class="device-home"></div>
-    </div>
-    <div class="device device-iphone-x">
-      <div class="device-frame">
-        <video class="device-content" muted="muted" autoplay="" loop="">
-          <source src="src/video/bg-01.mp4" type="video/mp4">
-        </video>
+      <div class="col-sm">
+        <div class="device device-iphone-x">
+          <div class="device-frame">
+            <video class="device-content" muted="muted" autoplay="" loop="">
+              <source src="src/video/bg-01.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="device-stripe"></div>
+          <div class="device-header"></div>
+          <div class="device-sensors"></div>
+          <div class="device-btns"></div>
+          <div class="device-power"></div>
+          <div class="device-home"></div>
+        </div>
       </div>
-      <div class="device-stripe"></div>
-      <div class="device-header"></div>
-      <div class="device-sensors"></div>
-      <div class="device-btns"></div>
-      <div class="device-power"></div>
-      <div class="device-home"></div>
-    </div>
-    <div class="device device-iphone-x">
-      <div class="device-frame">
-        <video class="device-content" muted="muted" autoplay="" loop="">
-          <source src="src/video/bg-01.mp4" type="video/mp4">
-        </video>
+      <div class="col-sm">
+        <div class="device device-iphone-x">
+          <div class="device-frame">
+            <video class="device-content" muted="muted" autoplay="" loop="">
+              <source src="src/video/bg-01.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="device-stripe"></div>
+          <div class="device-header"></div>
+          <div class="device-sensors"></div>
+          <div class="device-btns"></div>
+          <div class="device-power"></div>
+          <div class="device-home"></div>
+        </div>
       </div>
-      <div class="device-stripe"></div>
-      <div class="device-header"></div>
-      <div class="device-sensors"></div>
-      <div class="device-btns"></div>
-      <div class="device-power"></div>
-      <div class="device-home"></div>
     </div>
   </div>
   <h3 class="pt-3">Fam Finder 👫</h3>
   <p class="pb-4 text-justify">Need to hire a family member to take to your next event? We have you covered with Fam Finder!</p>
-  <div class="d-inline-flex p-2">
-    <div class="device device-macbook device-spacegray">
-      <div class="device-frame">
-        <img class="device-content" src="src/img/bg-07.jpg">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="device device-macbook device-spacegray">
+          <div class="device-frame">
+            <img class="device-content" src="src/img/bg-07.jpg">
+          </div>
+          <div class="device-stripe"></div>
+          <div class="device-header"></div>
+          <div class="device-sensors"></div>
+          <div class="device-btns"></div>
+          <div class="device-power"></div>
+        </div>
       </div>
-      <div class="device-stripe"></div>
-      <div class="device-header"></div>
-      <div class="device-sensors"></div>
-      <div class="device-btns"></div>
-      <div class="device-power"></div>
-    </div>
-    <div class="device device-macbook device-spacegray">
-      <div class="device-frame">
-        <img class="device-content" src="src/img/bg-07.jpg">
+      <div class="col-sm">
+        <div class="device device-macbook device-spacegray">
+          <div class="device-frame">
+            <img class="device-content" src="src/img/bg-07.jpg">
+          </div>
+          <div class="device-stripe"></div>
+          <div class="device-header"></div>
+          <div class="device-sensors"></div>
+          <div class="device-btns"></div>
+          <div class="device-power"></div>
+        </div>
       </div>
-      <div class="device-stripe"></div>
-      <div class="device-header"></div>
-      <div class="device-sensors"></div>
-      <div class="device-btns"></div>
-      <div class="device-power"></div>
-    </div>
-    <div class="device device-macbook device-spacegray">
-      <div class="device-frame">
-        <img class="device-content" src="src/img/bg-07.jpg">
+      <div class="col-sm">
+        <div class="device device-macbook device-spacegray">
+          <div class="device-frame">
+            <img class="device-content" src="src/img/bg-07.jpg">
+          </div>
+          <div class="device-stripe"></div>
+          <div class="device-header"></div>
+          <div class="device-sensors"></div>
+          <div class="device-btns"></div>
+          <div class="device-power"></div>
+        </div>
       </div>
-      <div class="device-stripe"></div>
-      <div class="device-header"></div>
-      <div class="device-sensors"></div>
-      <div class="device-btns"></div>
-      <div class="device-power"></div>
     </div>
   </div>
   <h3 class="pt-3">Masquerade 💃</h3>
