fixed responsiveness issues with devices, and added bootstrap containers to sections

--- a/source/partials/_contact.html.erb
+++ b/source/partials/_contact.html.erb
@@ -1,4 +1,9 @@
-<section id="contact">
-  <h2 class="mb-4">Get in touch! 📲</h2>
-  <p>Feel free to reach out to me on any of the following platforms:</p>
-</section>
+<div class="container">
+  <section id="contact">
+    <h2 class="mb-4">Get in touch! 📲</h2>
+    <p>Feel free to reach out to me on any of the following platforms:</p>
+    <% link_to 'https://github.com/akiwidev', target: '_blank' do %>
+      <i class="fab fa-github-square"></i>
+    <% end %>
+  </section>
+</div>
