--- a/source/assets/stylesheets/components/_iphoneX.scss
+++ b/source/assets/stylesheets/components/_iphoneX.scss
@@ -135,26 +135,26 @@ $device-silver-panel: #222;
 }
 .device {
   position: relative;
-  transform: scale(.5);
-  transform-origin: 50% 0%;
+  transform: scale(0.5);
+  transform-origin: 0% 0%;
   z-index: 1;
 }
 
-@media only screen and (max-width: 1024px) {
-  .device {
-    transform: scale(0.75);
-  }
-}
+// @media only screen and (max-width: 1024px) {
+//   .device {
+//     transform: scale(0.5);
+//   }
+// }
 
-@media only screen and (max-width: 768px) {
-  .device {
-    transform: scale(0.66);
-  }
-}
+// @media only screen and (max-width: 768px) {
+//   .device {
+//     transform: scale(0.5);
+//   }
+// }
 
-@media only screen and (max-width: 640px) {
-  .device {
-    transform: scale(0.5);
-  }
+// @media only screen and (max-width: 640px) {
+//   .device {
+//     transform: scale(0.5);
+//   }
 
-}
+// }
