added github, linkedin and mail icons in contact section

--- a/source/partials/_contact.html.erb
+++ b/source/partials/_contact.html.erb
@@ -5,5 +5,11 @@
     <% link_to 'https://github.com/akiwidev', target: '_blank' do %>
       <i class="fab fa-github-square"></i>
     <% end %>
+    <% link_to 'https://www.linkedin.com/in/akiwidev', target: '_blank' do %>
+      <i class="fab fa-linkedin"></i>
+    <% end %>
+    <% link_to 'mailto:akiwidev@gmail.com', target: '_blank' do %>
+      <i class="fas fa-envelope-square"></i>
+    <% end %>
   </section>
 </div>
