copied macbook scss into project

--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <section id="projects">
     <h2 class="mb-4">My Projects</h2>
-    <div class="d-inline-flex align-items-center">
-      <div>
+    <div class="d-inline-flex align-items-center mb-5">
+      <div class="mr-5">
         <h3>Safe Spaces 🏡</h3>
         <p class="pb-4 text-justify">Safe Spaces connects women walking home alone, with female homeowners who have kindly volunteered their places as somewhere these women can go, should they feel unsafe at any time.</p>
       </div>
@@ -20,7 +20,7 @@
         <div class="device-home"></div>
       </div>
     </div>
-    <div class="d-inline-flex align-items-center">
+    <div class="d-inline-flex align-items-center mb-5">
       <div class="device device-macbook device-spacegray">
         <div class="device-frame">
           <img class="device-content" src="src/img/bg-07.jpg">
@@ -31,7 +31,7 @@
         <div class="device-btns"></div>
         <div class="device-power"></div>
       </div>
-      <div>
+      <div class="ml-4">
         <h3 class="pt-3">Fam Finder 👫</h3>
         <p class="pb-4 text-justify">Need to hire a family member to take to your next event? We have you covered with Fam Finder!</p>
       </div>
