added footer to portfolio

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,3 +2,4 @@
 <%= partial 'partials/about' %>
 <%= partial 'partials/projects' %>
 <%= partial 'partials/contact' %>
+<%= partial 'partials/footer' %>
