added styling to footer and navbar

--- a/source/assets/stylesheets/components/_contact-icon.scss
+++ b/source/assets/stylesheets/components/_contact-icon.scss
@@ -1,9 +1,9 @@
 .contact-icon {
   font-size: 45px;
-  color: #2D898B;
+  color: #247B7B;
 
   &:hover {
-    color: #C1DBB3;
+    color: #A9D8B8;
     transform: scale(1.2);
     transition: .2s ease-in-out;
   }
