--- a/source/partials/_navbar.html.erb
+++ b/source/partials/_navbar.html.erb
@@ -1,6 +1,6 @@
 <header class="sticky">
   <%= image_tag 'cheri2.JPG', alt: 'picture of cheri', class: 'banner' %>
-  <a href="#" class="logo">Cheri.</a>
+  <a class="logo">Cheri.</a>
   <div class="toggle active"></div>
   <nav class="active">
     <ul id="close_nav">
