--- a/source/assets/stylesheets/components/_navbar.scss
+++ b/source/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,11 @@
 // Specific CSS for your home-page
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap');
 *
 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Arima Madurai', cursive;
 }
 header
 {
@@ -15,7 +15,7 @@ header
 	height: 100vh;
 	width: 100%;
 	padding: 0 100px;
-	background: #000;
+	background: #0D5C63;
 	transition: 1s;
 	box-sizing: border-box;
 	display: flex;
@@ -99,7 +99,7 @@ nav ul li a
 }
 nav ul li a:hover
 {
-	color: #ff275f;
+	color: #F3A712;
 }
 section
 {
@@ -153,7 +153,7 @@ section p
 		left: 0;
 		width: 100%;
 		height: calc(100% - 80px);
-		background: #000;
+		background: #0D5C63;
 		padding: 0;
 		display: flex;
 		justify-content: center;
