--- a/source/partials/_contact.html.erb
+++ b/source/partials/_contact.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <section id="contact">
     <h2 class="mb-4">Get in touch! 📲</h2>
-    <p>Feel free to reach out to me on any of the following platforms:</p>
+    <p class="mb-4">Feel free to reach out to me on any of the following platforms:</p>
     <div class="d-flex justify-content-around">
       <% link_to 'https://github.com/akiwidev', target: '_blank', class: 'contact-icon' do %>
         <i class="fab fa-github-square"></i>
