--- a/source/assets/stylesheets/components/_navbar.scss
+++ b/source/assets/stylesheets/components/_navbar.scss
@@ -34,11 +34,12 @@ header .logo
 	left: 50%;
 	transform: translate(-50%,-50%);
 	font-size: 15vw;
-	color: #fff;
+	color: #F4F4F4;
 	z-index: 100;
 	transition: 1s;
 	font-weight: 700;
 	text-decoration: none;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 header.sticky .logo
 {
@@ -91,7 +92,7 @@ nav ul li
 }
 nav ul li a
 {
-	color: #fff;
+	color: #F4F4F4;
 	display: inline-block;
 	padding: 10px 15px;
 	font-size: 1.2em;
@@ -172,7 +173,7 @@ section p
 	    width: 50px;
 	    height: 50px;
 	    cursor: pointer;
-	    background: #fff image_url('menu.png');
+	    background: #F4F4F4 image_url('menu.png');
 	    background-size: 30px;
 	    background-repeat: no-repeat;
 	    background-position: center;
@@ -180,7 +181,7 @@ section p
 	}
 	header.sticky .toggle.active
 	{
-	    background: #fff image_url('close.png');
+	    background: #F4F4F4 image_url('close.png');
 	    background-size: 25px;
 	    background-repeat: no-repeat;
 	    background-position: center;
