added carousel to safe spaces

--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -8,9 +8,7 @@
       </div>
       <div class="device device-iphone-x">
         <div class="device-frame">
-          <video class="device-content" muted="muted" autoplay="" loop="">
-            <source src="src/video/bg-01.mp4" type="video/mp4">
-          </video>
+          <%= partial 'partials/carouselss' %>
         </div>
         <div class="device-stripe"></div>
         <div class="device-header"></div>
