fixed macbook sizing issue

--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="d-inline-flex align-items-center">
-      <div>
+      <div class="mr-5">
         <h3 class="pt-3">Masquerade 💃</h3>
         <p class="pb-4 text-justify">Manage those events, and beautiful Venetian masks with Masquerade.</p>
       </div>
