fixed carousel for safe spaces project

--- a/source/partials/_carouselss.html.erb
+++ b/source/partials/_carouselss.html.erb
@@ -1,22 +1,82 @@
-<div id="carouselExampleControls" class="carousel slide device-content" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag "safe-spaces1.PNG", alt: "first screenshot", class: "d-block w-100" %>
+      <div class="device device-iphone-x">
+        <div class="device-frame">
+          <%= image_tag "safe-spaces1.PNG", alt: "first screenshot", class: "d-block w-100 device-content" %>
+        </div>
+        <div class="device-stripe"></div>
+        <div class="device-header"></div>
+        <div class="device-sensors"></div>
+        <div class="device-btns"></div>
+        <div class="device-power"></div>
+        <div class="device-home"></div>
+      </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "safe-spaces2.PNG", alt: "second screenshot", class: "d-block w-100" %>
+      <div class="device device-iphone-x">
+        <div class="device-frame">
+          <%= image_tag "safe-spaces2.PNG", alt: "second screenshot", class: "d-block w-100 device-content " %>
+        </div>
+        <div class="device-stripe"></div>
+        <div class="device-header"></div>
+        <div class="device-sensors"></div>
+        <div class="device-btns"></div>
+        <div class="device-power"></div>
+        <div class="device-home"></div>
+      </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "safe-spaces3.PNG", alt: "third screenshot", class: "d-block w-100" %>
+      <div class="device device-iphone-x">
+        <div class="device-frame">
+          <%= image_tag "safe-spaces3.PNG", alt: "third screenshot", class: "d-block w-100 device-content " %>
+        </div>
+        <div class="device-stripe"></div>
+        <div class="device-header"></div>
+        <div class="device-sensors"></div>
+        <div class="device-btns"></div>
+        <div class="device-power"></div>
+        <div class="device-home"></div>
+      </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "safe-spaces4.PNG", alt: "fourth screenshot", class: "d-block w-100" %>
+      <div class="device device-iphone-x">
+        <div class="device-frame">
+          <%= image_tag "safe-spaces4.PNG", alt: "fourth screenshot", class: "d-block w-100 device-content " %>
+        </div>
+        <div class="device-stripe"></div>
+        <div class="device-header"></div>
+        <div class="device-sensors"></div>
+        <div class="device-btns"></div>
+        <div class="device-power"></div>
+        <div class="device-home"></div>
+      </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "safe-spaces5.PNG", alt: "fifth screenshot", class: "d-block w-100" %>
+      <div class="device device-iphone-x">
+        <div class="device-frame">
+          <%= image_tag "safe-spaces5.PNG", alt: "fifth screenshot", class: "d-block w-100 device-content " %>
+        </div>
+        <div class="device-stripe"></div>
+        <div class="device-header"></div>
+        <div class="device-sensors"></div>
+        <div class="device-btns"></div>
+        <div class="device-power"></div>
+        <div class="device-home"></div>
+      </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "safe-spaces6.PNG", alt: "sixth screenshot", class: "d-block w-100" %>
+      <div class="device device-iphone-x">
+        <div class="device-frame">
+          <%= image_tag "safe-spaces6.PNG", alt: "sixth screenshot", class: "d-block w-100 device-content " %>
+        </div>
+        <div class="device-stripe"></div>
+        <div class="device-header"></div>
+        <div class="device-sensors"></div>
+        <div class="device-btns"></div>
+        <div class="device-power"></div>
+        <div class="device-home"></div>
+      </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
