finished safe sapces carousel in projects section

--- a/source/partials/_carouselss.html.erb
+++ b/source/partials/_carouselss.html.erb
@@ -16,7 +16,7 @@
     <div class="carousel-item">
       <div class="device device-iphone-x">
         <div class="device-frame">
-          <%= image_tag "safe-spaces2.PNG", alt: "second screenshot", class: "d-block w-100 device-content " %>
+          <%= image_tag "safe-spaces2.PNG", alt: "second screenshot", class: "d-block w-100 device-content" %>
         </div>
         <div class="device-stripe"></div>
         <div class="device-header"></div>
@@ -42,7 +42,7 @@
     <div class="carousel-item">
       <div class="device device-iphone-x">
         <div class="device-frame">
-          <%= image_tag "safe-spaces4.PNG", alt: "fourth screenshot", class: "d-block w-100 device-content " %>
+          <%= image_tag "safe-spaces4.PNG", alt: "fourth screenshot", class: "d-block w-100 device-content" %>
         </div>
         <div class="device-stripe"></div>
         <div class="device-header"></div>
@@ -56,6 +56,19 @@
       <div class="device device-iphone-x">
         <div class="device-frame">
           <%= image_tag "safe-spaces5.PNG", alt: "fifth screenshot", class: "d-block w-100 device-content " %>
+        </div>
+        <div class="device-stripe"></div>
+        <div class="device-header"></div>
+        <div class="device-sensors"></div>
+        <div class="device-btns"></div>
+        <div class="device-power"></div>
+        <div class="device-home"></div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="device device-iphone-x">
+        <div class="device-frame">
+          <%= image_tag "safe-spaces5-5.jpeg", alt: "fifth screenshot", class: "d-block w-100 device-content " %>
         </div>
         <div class="device-stripe"></div>
         <div class="device-header"></div>
