added screenshots to fam finder and masquerade projects

--- a/source/assets/stylesheets/components/_index.scss
+++ b/source/assets/stylesheets/components/_index.scss
@@ -9,14 +9,12 @@
 @import "macbook";
 @import "contact-icon";
 @import "footer";
+@import "projects";
 
 h2 {
   font-family: 'Arima Madurai', cursive;
 }
-h3 {
-  font-family: 'Raleway', sans-serif;
-  font-weight: bold;
-}
+
 p {
   font-family: 'Raleway', sans-serif;
 }
