--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -3,15 +3,15 @@
     <h2 class="mb-4">My Projects</h2>
     <div class="d-inline-flex align-items-center mb-5">
       <div class="mr-5">
-        <h3>Safe Spaces 🏡</h3>
-        <p class="pb-4 text-justify">Safe Spaces connects women walking home alone, with female homeowners who have kindly volunteered their places as somewhere these women can go, should they feel unsafe at any time.</p>
+        <%= link_to "Safe Spaces 🏡", "https://www.safespacesjp.com/", target: '_blank', class: "project-name" %>
+        <p class="pb-4">Safe Spaces connects women walking home alone, with female homeowners who have kindly volunteered their places as somewhere these women can go, should they feel unsafe at any time.</p>
       </div>
       <%= partial 'partials/carouselss' %>
     </div>
-    <div class="d-inline-flex align-items-center mb-5">
+    <div class="d-inline-flex align-items-center mb-5 p-3">
       <div class="device device-macbook device-spacegray">
         <div class="device-frame">
-          <img class="device-content" src="src/img/bg-07.jpg">
+          <%= image_tag "fam-finder1.png", alt: "first screenshot", class: "d-block w-100 device-content" %>
         </div>
         <div class="device-stripe"></div>
         <div class="device-header"></div>
@@ -19,19 +19,19 @@
         <div class="device-btns"></div>
         <div class="device-power"></div>
       </div>
-      <div class="ml-4">
-        <h3 class="pt-3">Fam Finder 👫</h3>
-        <p class="pb-4 text-justify">Need to hire a family member to take to your next event? We have you covered with Fam Finder!</p>
+      <div class="ml-5">
+        <%= link_to "Fam Finder 👫", "https://fam-finder.herokuapp.com/", target: '_blank', class: "project-name" %>
+        <p class="pb-4">Need to hire a family member to take to your next event? We have you covered with Fam Finder!</p>
       </div>
     </div>
     <div class="d-inline-flex align-items-center">
       <div class="mr-5">
-        <h3 class="pt-3">Masquerade 💃</h3>
+        <%= link_to "Masquerade 💃", "https://masquerade-manager.herokuapp.com/", target: '_blank', class: "project-name" %>
         <p class="pb-4 text-justify">Manage those events, and beautiful Venetian masks with Masquerade.</p>
       </div>
       <div class="device device-macbook device-spacegray">
         <div class="device-frame">
-          <img class="device-content" src="src/img/bg-07.jpg">
+          <%= image_tag "masquerade1.png", alt: "first screenshot", class: "d-block w-100 device-content" %>
         </div>
         <div class="device-stripe"></div>
         <div class="device-header"></div>
