changed padding around contact icons

--- a/source/partials/_contact.html.erb
+++ b/source/partials/_contact.html.erb
@@ -2,14 +2,14 @@
   <section id="contact">
     <h2 class="mb-4">Get in touch! 📲</h2>
     <p class="mb-4">Feel free to reach out to me on any of the following platforms:</p>
-    <div class="d-flex justify-content-around">
-      <% link_to 'https://github.com/akiwidev', target: '_blank', class: 'contact-icon' do %>
+    <div class="d-flex justify-content-center">
+      <% link_to 'https://github.com/akiwidev', target: '_blank', class: 'contact-icon p-3' do %>
         <i class="fab fa-github-square"></i>
       <% end %>
-      <% link_to 'https://www.linkedin.com/in/akiwidev', target: '_blank', class: 'contact-icon' do %>
+      <% link_to 'https://www.linkedin.com/in/akiwidev', target: '_blank', class: 'contact-icon p-3' do %>
         <i class="fab fa-linkedin"></i>
       <% end %>
-      <% link_to 'mailto:akiwidev@gmail.com', target: '_blank', class: 'contact-icon' do %>
+      <% link_to 'mailto:akiwidev@gmail.com', target: '_blank', class: 'contact-icon p-3' do %>
         <i class="fas fa-envelope-square"></i>
       <% end %>
     </div>
