added tech stack to safe spaces project

--- a/source/assets/stylesheets/components/_index.scss
+++ b/source/assets/stylesheets/components/_index.scss
@@ -10,6 +10,7 @@
 @import "contact-icon";
 @import "footer";
 @import "projects";
+@import "tech-stack";
 
 h2 {
   font-family: 'Arima Madurai', cursive;
