--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -4,7 +4,18 @@
     <div class="d-inline-flex align-items-center mb-5">
       <div class="mr-5">
         <%= link_to "Safe Spaces 🏡", "https://www.safespacesjp.com/", target: '_blank', class: "project-name" %>
+        <p><strong>Role:</strong> Project Manager</p>
         <p class="pb-4">Safe Spaces connects women walking home alone, with female homeowners who have kindly volunteered their places as somewhere these women can go, should they feel unsafe at any time.</p>
+        <div class="tech-stack">
+          <p><strong>Tech Stack:</strong></p>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rails/rails-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/heroku/heroku-plain-wordmark.svg" />
+        </div>
       </div>
       <%= partial 'partials/carouselss' %>
     </div>
