--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,6 +4,7 @@
     <!-- INSERT GOOGLE ANALYTICS HERE -->
     <meta charset="utf-8">
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <!-- For Bootstrap responsiveness -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
