--- a/source/assets/stylesheets/components/_navbar.scss
+++ b/source/assets/stylesheets/components/_navbar.scss
@@ -101,6 +101,9 @@ nav ul li a
 nav ul li a:hover
 {
 	color: #F3A712;
+  text-decoration: none;
+  transform: scale(1.2);
+  transition: .2s ease-in-out;
 }
 section
 {
