added tech stack to fam finder project

--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <section id="projects">
     <h2 class="mb-4">My Projects</h2>
-    <div class="d-inline-flex align-items-center mb-5">
+    <div class="d-inline-flex align-items-center mb-5 projects">
       <div class="mr-5">
         <%= link_to "Safe Spaces 🏡", "https://www.safespacesjp.com/", target: '_blank', class: "project-name" %>
         <p><strong>Role:</strong> Project Manager</p>
@@ -15,6 +15,8 @@
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original-wordmark.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/heroku/heroku-plain-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" />
         </div>
       </div>
       <%= partial 'partials/carouselss' %>
@@ -32,7 +34,19 @@
       </div>
       <div class="ml-5">
         <%= link_to "Fam Finder 👫", "https://fam-finder.herokuapp.com/", target: '_blank', class: "project-name" %>
+        <p><strong>Role:</strong> Lead Developer</p>
         <p class="pb-4">Need to hire a family member to take to your next event? We have you covered with Fam Finder!</p>
+        <div class="tech-stack">
+          <p><strong>Tech Stack:</strong></p>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rails/rails-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/heroku/heroku-plain-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" />
+        </div>
       </div>
     </div>
     <div class="d-inline-flex align-items-center">
