--- a/source/assets/stylesheets/components/_projects.scss
+++ b/source/assets/stylesheets/components/_projects.scss
@@ -11,8 +11,29 @@
   }
 }
 
-@media (min-width: 100px) and (max-width: 575px) {
-  .projects {
-
+@media only screen and (min-width: 576px) {
+  .project-responsive {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+    margin-bottom: 32px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .project-responsive {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .project-responsive {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-left: 16px;
   }
 }
