--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <section id="projects">
     <h2 class="mb-4">My Projects</h2>
-    <div class="d-inline-flex align-items-center mb-5 projects">
-      <div class="mr-5">
+    <div class="project-responsive">
+      <div>
         <%= link_to "Safe Spaces 🏡", "https://www.safespacesjp.com/", target: '_blank', class: "project-name" %>
         <p><strong>Role:</strong> Project Manager</p>
         <p class="pb-4">Safe Spaces connects women walking home alone, with female homeowners who have kindly volunteered their places as somewhere these women can go, should they feel unsafe at any time.</p>
-        <div class="tech-stack">
+        <div class="tech-stack mb-3">
           <p><strong>Tech Stack:</strong></p>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-original-wordmark.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/rails/rails-original-wordmark.svg" />
@@ -21,7 +21,7 @@
       </div>
       <%= partial 'partials/carouselss' %>
     </div>
-    <div class="d-inline-flex align-items-center mb-5 p-3">
+    <div class="project-responsive">
       <div class="device device-macbook device-spacegray">
         <div class="device-frame">
           <%= image_tag "fam-finder1.png", alt: "first screenshot", class: "d-block w-100 device-content" %>
@@ -32,7 +32,7 @@
         <div class="device-btns"></div>
         <div class="device-power"></div>
       </div>
-      <div class="ml-5">
+      <div class="project-responsive">
         <%= link_to "Fam Finder 👫", "https://fam-finder.herokuapp.com/", target: '_blank', class: "project-name" %>
         <p><strong>Role:</strong> Lead Developer</p>
         <p class="pb-4">Need to hire a family member to take to your next event? We have you covered with Fam Finder!</p>
