--- a/source/assets/stylesheets/components/_tech-stack.scss
+++ b/source/assets/stylesheets/components/_tech-stack.scss
@@ -3,3 +3,14 @@
   width: 40px;
   padding: 4px;
 }
+
+@media only screen and (max-width: 576px) {
+  .tech-stack {
+    margin-bottom: 32px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .tech-stack {
+    margin-bottom: 32px;
+  }
+}
