added role and tech stack to masquerade project

--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -51,23 +51,32 @@
         </div>
       </div>
     </div>
-    <div class="project-responsive">
+    <div class="project-responsive border-bottom">
       <div class="mr-5">
         <%= link_to "Masquerade 💃", "https://masquerade-manager.herokuapp.com/", target: '_blank', class: "project-name" %>
+        <p><strong>Role:</strong> Lead Developer</p>
         <p class="pb-4 text-justify">Manage those events, and beautiful Venetian masks with Masquerade.</p>
-      </div>
-      <div class="project-responsive">
-        <div class="device device-macbook device-spacegray">
-          <div class="device-frame">
-            <%= image_tag "masquerade1.png", alt: "first screenshot", class: "d-block w-100 device-content" %>
+        <div class="tech-stack">
+          <p><strong>Tech Stack:</strong></p>
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/heroku/heroku-plain-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" />
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" />
+        </div>
+        <div class="project-responsive">
+          <div class="device device-macbook device-spacegray">
+            <div class="device-frame">
+              <%= image_tag "masquerade1.png", alt: "first screenshot", class: "d-block w-100 device-content" %>
+            </div>
+            <div class="device-stripe"></div>
+            <div class="device-header"></div>
+            <div class="device-sensors"></div>
+            <div class="device-btns"></div>
+            <div class="device-power"></div>
           </div>
-          <div class="device-stripe"></div>
-          <div class="device-header"></div>
-          <div class="device-sensors"></div>
-          <div class="device-btns"></div>
-          <div class="device-power"></div>
         </div>
       </div>
-    </div>
-  </section>
-</div>
+    </section>
+  </div>
