--- a/source/assets/stylesheets/components/_projects.scss
+++ b/source/assets/stylesheets/components/_projects.scss
@@ -37,6 +37,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 32px;
+    margin-bottom: 32px;
   }
 }
 @media only screen and (min-width: 992px) {
@@ -46,5 +47,6 @@
     align-items: center;
     justify-content: center;
     margin-top: 32px;
+    margin-bottom: 32px;
   }
 }
