--- a/source/partials/_carouselss.html.erb
+++ b/source/partials/_carouselss.html.erb
@@ -1,4 +1,4 @@
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide project-responsive" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <div class="device device-iphone-x">
