--- a/source/partials/_projects.html.erb
+++ b/source/partials/_projects.html.erb
@@ -2,10 +2,10 @@
   <section id="projects">
     <h2 class="mb-4">My Projects</h2>
     <div class="project-responsive border-bottom">
-      <div>
+      <div class="mr-4">
         <%= link_to "Safe Spaces 🏡", "https://www.safespacesjp.com/", target: '_blank', class: "project-name" %>
         <p><strong>Role:</strong> Project Manager</p>
-        <p class="pb-4">Safe Spaces connects women walking home alone, with female homeowners who have kindly volunteered their places as somewhere these women can go, should they feel unsafe at any time.</p>
+        <p class="pb-5">Safe Spaces connects women walking home alone, with female homeowners who have kindly volunteered their places as somewhere these women can go, should they feel unsafe at any time.</p>
         <div class="tech-stack mb-3">
           <p><strong>Tech Stack:</strong></p>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-original-wordmark.svg" />
@@ -22,7 +22,7 @@
       <%= partial 'partials/carouselss' %>
     </div>
     <div class="project-responsive border-bottom">
-      <div class="mr-5">
+      <div class="mr-4">
         <%= link_to "Fam Finder 👫", "https://fam-finder.herokuapp.com/", target: '_blank', class: "project-name" %>
         <p><strong>Role:</strong> Lead Developer</p>
         <p class="pb-4">Need to hire a family member to take to your next event? We have you covered with Fam Finder!</p>
@@ -52,31 +52,31 @@
       </div>
     </div>
     <div class="project-responsive border-bottom">
-      <div class="mr-5">
+      <div class="mr-4">
         <%= link_to "Masquerade 💃", "https://masquerade-manager.herokuapp.com/", target: '_blank', class: "project-name" %>
         <p><strong>Role:</strong> Lead Developer</p>
-        <p class="pb-4 text-justify">Manage those events, and beautiful Venetian masks with Masquerade.</p>
+        <p class="pb-4">Manage those events, and beautiful Venetian masks with Masquerade.</p>
         <div class="tech-stack">
           <p><strong>Tech Stack:</strong></p>
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ruby/ruby-original-wordmark.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/heroku/heroku-plain-wordmark.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original-wordmark.svg" />
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original-wordmark.svg" />
         </div>
-        <div class="project-responsive">
-          <div class="device device-macbook device-spacegray">
-            <div class="device-frame">
-              <%= image_tag "masquerade1.png", alt: "first screenshot", class: "d-block w-100 device-content" %>
-            </div>
-            <div class="device-stripe"></div>
-            <div class="device-header"></div>
-            <div class="device-sensors"></div>
-            <div class="device-btns"></div>
-            <div class="device-power"></div>
+      </div>
+      <div class="project-responsive">
+        <div class="device device-macbook device-spacegray">
+          <div class="device-frame">
+            <%= image_tag "masquerade1.png", alt: "first screenshot", class: "d-block w-100 device-content" %>
           </div>
+          <div class="device-stripe"></div>
+          <div class="device-header"></div>
+          <div class="device-sensors"></div>
+          <div class="device-btns"></div>
+          <div class="device-power"></div>
         </div>
       </div>
-    </section>
-  </div>
+    </div>
+  </section>
+</div>
